# safety-kernel

./: .gitignore  LICENSE  README.md  hello.py  pyproject.toml  test_sk.py  test_tamper.py
sk/: __init__.py  cli.py  proof.py  runner.py  verify.py
